Fix layout problems with team summary

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,7 +1,7 @@
 /*
  *  Author: Kaleb Jubar
  *  Created: 1 Apr 2024, 2:29:51 PM
- *  Last update: 9 Apr 2024, 11:04:13 AM
+ *  Last update: 9 Apr 2024, 11:16:30 AM
  *  Copyright (c) 2024 Kaleb Jubar
  */
 
@@ -475,26 +475,37 @@ body:has(.main-card.card-lg) #mainHeading {
 /* team summary styles */
 #teamSummDisplay {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template: 1fr 1fr / 1fr 1fr;
+    height: 90%;
+    border-radius: 5px;
+    overflow: scroll;
 }
 
 .team-summ-char-details {
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 10px;
-    padding: 10px;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
     align-items: center;
+    /* overflow: scroll; */
 }
 
 .team-summ-operator {
-    grid-row: 1 / 4;
-    grid-column: 1 / 2;
+    flex-basis: 30%;
 }
 
 .team-summ-operator > img {
     width: 100%;
+}
+
+.team-summ-weapons {
+    flex-basis: 70%;
+    height: 100%;
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr 1fr;
+    gap: 20px;
 }
 
 #resetBtn {
@@ -524,5 +535,9 @@ body:has(.main-card.card-lg) #mainHeading {
     #weaponSkinList {
         grid-template-columns: 1fr 1fr 1fr;
         flex-basis: 75%;
+    }
+
+    #teamSummDisplay {
+        grid-template: 1fr 1fr 1fr 1fr / 1fr;
     }
 }
